@@ -4,50 +4,63 @@ import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
+import ru.practicum.shareit.exceptions.NotFoundException;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.dto.ItemMapper;
 import ru.practicum.shareit.item.model.Item;
+import ru.practicum.shareit.user.User;
+import ru.practicum.shareit.user.UserRepository;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Validated
 @RequiredArgsConstructor
 public class ItemServiceImpl implements ItemService {
     private final ItemRepository itemRepository;
+    private final UserRepository userRepository;
 
     @Override
     public ItemDto create(long userId, @Valid ItemDto itemDto) {
+        User user = userRepository.findById(userId).orElseThrow(() ->
+                new NotFoundException("User with " + userId + " is not found"));
+
         Item item = ItemMapper.toItem(itemDto);
-        return ItemMapper.toItemDto(itemRepository.create(userId, item));
+        item.setOwner(user);
+        return ItemMapper.toItemDto(itemRepository.save(item));
     }
 
     @Override
     public ItemDto update(long userId, long itemId, ItemDto itemDto) {
-        Item item = ItemMapper.toItem(itemDto);
-        return ItemMapper.toItemDto(itemRepository.update(userId, itemId, item));
+        Item item = itemRepository.findByOwnerIdAndId(userId, itemId).orElseThrow(
+                () -> new NotFoundException("Item with id " + itemId + " is not found for user with id " + userId));
+
+        if (itemDto.getName() != null && !itemDto.getName().isBlank()) item.setName(itemDto.getName());
+        if (itemDto.getDescription() != null && !itemDto.getDescription().isBlank())
+            item.setDescription(itemDto.getDescription());
+        if (itemDto.getAvailable() != null) item.setAvailable(itemDto.getAvailable());
+        return ItemMapper.toItemDto(itemRepository.save(item));
     }
 
     @Override
     public ItemDto findById(long userId, long itemId) {
-        return ItemMapper.toItemDto(itemRepository.findById(userId, itemId));
+        return ItemMapper.toItemDto(itemRepository.findByOwnerIdAndId(userId, itemId).orElseThrow(
+                () -> new NotFoundException("Item with id " + itemId + " is not found for user with id " + userId)
+        ));
     }
 
     @Override
     public List<ItemDto> findAll(long userId) {
-        return itemRepository.findAll(userId).stream()
+        return itemRepository.findAllByOwnerId(userId).stream()
                 .map(ItemMapper::toItemDto)
                 .toList();
     }
 
     @Override
     public List<ItemDto> searchAll(String text) {
-        if (text.isBlank()) {
-            return Collections.emptyList();
-        }
-        return itemRepository.searchAll(text.toLowerCase()).stream()
+        return itemRepository.findAllAvailableByText(text).stream()
                 .map(ItemMapper::toItemDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
